cmake_minimum_required(VERSION 3.28)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(SOURCE_DIR "${PROJECT_SOURCE_DIR}/src")
project(nullsafety_tests LANGUAGES CXX)
add_subdirectory(hng/nullsafety)
add_executable(nullsafety_tests src/main.cpp)
target_compile_features(nullsafety_tests PRIVATE cxx_std_20)
target_link_libraries(nullsafety_tests PRIVATE nullsafety)
target_include_directories(nullsafety_tests PRIVATE include)
