cmake_minimum_required(VERSION 3.28)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
project(nullsafety_tests VERSION 1.0.1 LANGUAGES CXX)
add_subdirectory(hng/nullsafety)
add_executable(nullsafety_tests src/main.cpp)
target_compile_features(nullsafety_tests PRIVATE cxx_std_20)
target_link_libraries(nullsafety_tests PRIVATE nullsafety)
#target_include_directories(nullsafety_tests PRIVATE include)

if(MSVC)
  target_compile_options(nullsafety_tests PRIVATE /W4 /WX)
else()
  target_compile_options(nullsafety_tests PRIVATE -Wall -Wextra -Wpedantic -Werror)
endif()
